--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,8 +9,9 @@
     <div fxShow="true" fxHide.lt-md="true">
 
       <!-- The following menu items will be hidden on both SM and XS screen sizes -->
+      <a [routerLink]="['/home']" mat-button>Home</a>
 
-      <a [routerLink]="['/users']" mat-button>Users</a>
+      <a [routerLink]="['users']" mat-button>Users</a>
 
       <a mat-button>Menu Item 2</a>
 
@@ -19,16 +20,16 @@
       <a mat-button>Menu Item 4</a>
 
       <a mat-button>
-        <mat-icon matBadge="9" matBadgeColor="accent">add_alert</mat-icon>
+        <mat-icon matBadge="9" matBadgeColor="accent">notifications</mat-icon>
       </a>
 
-      <a mat-button>Logout</a>
+      <a [routerLink]="['login']" mat-button>Logout</a>
 
     </div>
 
     <div fxShow="true" fxHide.gt-sm="true">
       <a mat-button>
-        <mat-icon matBadge="9" matBadgeColor="accent">add_alert</mat-icon>
+        <mat-icon matBadge="9" matBadgeColor="accent">notifications</mat-icon>
       </a>
 
       <a mat-button (click)="sidenav.toggle()">
@@ -49,7 +50,9 @@
           <mat-icon>close</mat-icon>
         </a>
 
-        <a [routerLink]="['/users']" mat-button>Users</a>
+        <a [routerLink]="['/home']" mat-button>Home</a>
+
+        <a [routerLink]="['users']" mat-button>Users</a>
 
         <a mat-button>Menu Item 2</a>
 
@@ -57,7 +60,7 @@
 
         <a mat-button>Menu Item 4</a>
 
-        <a mat-button>Logout</a>
+        <a [routerLink]="['login']" mat-button>Logout</a>
 
       </div>
 
