--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
 
       <a [routerLink]="['users']" mat-button>Users</a>
 
-      <a mat-button>Menu Item 2</a>
+      <a [routerLink]="['forms']" mat-button>Forms</a>
 
       <a mat-button>Menu Item 3</a>
 
@@ -54,7 +54,7 @@
 
         <a [routerLink]="['users']" mat-button>Users</a>
 
-        <a mat-button>Menu Item 2</a>
+        <a [routerLink]="['forms']" mat-button>Forms</a>
 
         <a mat-button>Menu Item 3</a>
 
